master: generate fakedata, insert data, add queries

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Zubair",
   "license": "MIT",
   "dependencies": {
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "mongodb": "^3.5.5"
   }
 }
